2005-12-22  Richard Hult  <richard@imendio.com>

	* gconf/Makefile.am: Use pkg-config to get the default system bus
	address.

	* configure.in: Require dbus 0.60.

	* gconf/gconfd-dbus.c (gconfd_dbus_init): Replace the inhibit
	replacement flag with 0 (no replace is default in dbus 0.60+).

2005-12-15  Richard Hult  <richard@imendio.com>

	* gconf/gconfd.c: (main): Plug two small leaks, from maemo gconf.

2005-11-22  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus-utils.c: (utils_append_value):
	(gconf_dbus_utils_get_entry_values):
	(utils_get_value_helper_fundamental):
	(utils_get_value): Handle NULL values, map to
	GCONF_VALUE_INVALID. This is needed to handle NULL values in
	notification.

	* gconf/gconf-dbus.c: (handle_notify): Allow NULL values, this
	happens when unsetting a key and there's no schema.

2005-11-17  Richard Hult  <richard@imendio.com>

	* configure.in: Bump to 2.6.4.13.

	* gconf/gconf-dbus.c (gconf_engine_all_entries): Use the new
	function in utils to get the array of entries.

	* gconf/gconf-database-dbus.c (database_handle_get_all_entries):
	Use the new funcion in utils to append the array of entries.

	* gconf/gconf-dbus-utils.c
	(utils_append_entry_values_stringified): Handle invalid values
	here, fixes crash for example when schemas are invalid.
	- Refactor a bit, use an array of entries instead of just
	appending them, makes our signatures a lot smaller.

2005-11-01  Richard Hult  <richard@imendio.com>

	* Release 2.6.4.12, which is a first version for testing with
	D-BUS 0.30+.
	
	* backends/Makefile.am:
	* backends/gconf-merge-tree.c: (merge_tree):
	* backends/markup-backend.c: (resolve_address):
	* backends/markup-tree.c: (markup_tree_get), (markup_dir_sync):
	* backends/markup-tree.h: Revert the reliable writes patch, since
	it's not used.

	* configure.in: Define HAVE_DBUS unconditionally.

	* gconf/gconfd.c: Disable debug mode.

2005-11-01  Richard Hult  <richard@imendio.com>
